<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bus Tracker</string>
    <string name="title_login">Login</string>
    <string name="login_information">Login Information</string>
    <string name="password">Password</string>
    <string name="bus_number">Bus Number</string>
    <string name="status_not_logged_in">Not Logged In</string>
    <string name="status_incorrect_password">Invalid Password</string>
    <string name="status_logged_in">Logged In</string>
    <string name="login">Login</string>
    <string name="remove_all_buses">Remove All Buses</string>
    <string name="remove_all_buses_success">Successfully Removed All Buses</string>
    <string name="remove_all_buses_failure">Unable to Remove All Buses. Check Login Information</string>
    <string name="add_bus">Add Bus</string>
    <string name="add_bus_success">Successfully Added Bus</string>
    <string name="add_bus_failure">Unable to Add Bus. Check Login Information</string>
    <string name="remove_bus_success">Successfully Removed Bus</string>
    <string name="remove_bus_failure">Unable to Remove Bus. Check Login Information</string>

    <string name="search_hint">Bus Number</string>
    <string name="search_button">Search</string>
    <string name="search_failed">Bus Not Found</string>
    <string name="bus_title">Bus</string>
    <string name="bus_number_format">Bus %s</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="add_favorite_bus">Add to Favorites</string>
    <string name="remove_favorite_bus">Remove from Favorites</string>
    <string name="empty_bus_number">Enter Bus Number to Add</string>
    <string name="duplicate_bus_number">Bus Already Arrived</string>

    <string name="url_base">http://bustracker-app.appspot.com/</string>
    <string name="url_add_reg_id">add_reg_id.php</string>
    <string name="url_get_schools">get_schools.php</string>
    <string name="url_get_school_info">get_school_info.php</string>
    <string name="url_check_login">check_login.php</string>
    <string name="url_add_bus">add_bus.php</string>
    <string name="url_get_buses">get_buses.php</string>
    <string name="url_remove_all_buses">remove_all_buses.php</string>
    <string name="url_remove_bus">remove_bus.php</string>

    <string name="registration_success">Successfully registered with Server.</string>
    <string name="registration_failed">Unable to register with Server. Dynamic updates unavailable.</string>

    <string name="google_project_id">284738695957</string>
    <string name="intent_message">com.blaine.bustracker.GCMService.MESSAGE</string>

    <string name="shared_pref_user">shared_pref_user</string>
    <string name="pref_registered">registered</string>
    <string name="pref_favorite_bus">favorite_bus_%1$s</string>
    <string name="pref_password">password_%1$s</string>

    <string name="notification_title">Bus %s has arrived</string>
    <string name="notification_detail">%1$s, %2$s from front</string>

    <string name="key_bus">bus</string>
    <string name="key_school">school</string>

    <string name="key_message">message</string>
    <string name="key_add_bus">add_bus</string>
    <string name="key_remove_bus">remove_bus</string>
    <string name="key_remove_all_buses">remove_all_buses</string>

    <string name="key_schools">schools</string>
    <string name="key_reg_id">reg_id</string>
    <string name="key_school_id">_id</string>
    <string name="key_name">name</string>
    <string name="key_rows">rows</string>
    <string name="key_row_names">row_names</string>
    <string name="key_default_row">default_row</string>
    <string name="key_password">password</string>
    <string name="key_buses">buses</string>
    <string name="key_bus_row">bus_row</string>
    <string name="key_bus_row_name">row_name</string>
    <string name="key_bus_number">bus_number</string>
    <string name="key_bus_position">position</string>
    <string name="key_success">success</string>
</resources>
