<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="20dp"
		>

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="20dp"
			>

		<TextView
				android:id="@+id/password_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/login_information"
				/>

		<EditText
				android:id="@+id/password_field"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textPassword"
				/>

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/login"
				android:onClick="login"
				/>

		<TextView
				android:id="@+id/status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/status_not_logged_in"
				/>

		<Button
				android:id="@+id/remove_all_buses"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/remove_all_buses"
				android:onClick="removeAllBuses"
				android:layout_marginTop="100dp"
				android:visibility="invisible"
				/>

	</LinearLayout>
</ScrollView>